src/objects/CalendarBrand__c.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>CalendarBrand</relationshipLabel>
        <relationshipName>CalendarBrand</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Calendar__c</fullName>
        <label>Calendar</label>
        <referenceTo>Calendar__c</referenceTo>
        <relationshipLabel>CalendarBrand</relationshipLabel>
        <relationshipName>CalendarBrand</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Primary_Brand__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only one Calendar Brand can marked as primary for a Calender</description>
        <inlineHelpText>Only one Calendar Brand can marked as primary for a Calender</inlineHelpText>
        <label>Primary Brand</label>
        <type>Checkbox</type>
    </fields>
    <label>CalendarBrand</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Calendar__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Primary_Brand__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CalendarBrand Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CalendarBrand</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>